[package]
name = "graphing-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow =  {version = "1.0.86"}
calculator-lib = "0.1.0"
eframe =  { version = "0.28.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
]}
egui = "0.28.1"
egui_plot = "0.28.1"
serde = "1.0.209"
